fix media queries

--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
   <title>Fitness News</title>
   <!-- dont forget the meta tag for responsiveness -->
 </head>
@@ -35,152 +35,152 @@
 
   </header>
 
-  <div class="all-news-container">
-    <section class="big-news">
-      <img class="main-image" src="./steps.jpg" alt="Steps image" />
-      <article class="article">
-        <h2>TOP 10 Fitness trends for 2021</h2>
-        <p>American College of Sports Medicine has released <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">top 10 Fitness Trends for 2021</a> which you can find on this site. </p>
-      </article>
-    </section>
+  <section class="big-news">
+    <img class="main-image" src="./steps.jpg" alt="Steps image" />
+    <article class="article">
+      <h2>TOP 10 Fitness trends for 2021</h2>
+      <p>American College of Sports Medicine has released <a
+          href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">top 10 Fitness
+          Trends for 2021</a> which you can find on this site. </p>
+    </article>
+  </section>
 
-    <section class="other-news">
+  <section class="other-news">
+    <div class="news-card">
+      <img src="./homeworkout.jpg" alt="Home workout image" />
+      <h3>Online training</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
+        sed
+        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
+        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
+        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
+        pharetra
+        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
+      <a href="#">Read more</a>
+    </div>
 
-      <div class="news-card">
-        <img src="./homeworkout.jpg" alt="Home workout image" />
-        <h3>Online training</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-          sed
-          nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-          finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-          sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-          pharetra
-          augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-        <a href="#">Read more</a>
-      </div>
+    <div class="news-card">
+      <img src="./wearable.jpg" alt="" />
+      <h3>Wearable technology</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
+        sed
+        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
+        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
+        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
+        pharetra
+        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
+      <a href="#">Read more</a>
+    </div>
 
-      <div class="news-card">
-        <img src="./wearable.jpg" alt="" />
-        <h3>Wearable technology</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-          sed
-          nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-          finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-          sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-          pharetra
-          augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-        <a href="#">Read more</a>
-      </div>
+    <div class="news-card">
+      <img src="./pushup.jpg" alt="" />
+      <h3>Body weight training</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
+        sed
+        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
+        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
+        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
+        pharetra
+        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
+      <a href="#">Read more</a>
+    </div>
 
-      <div class="news-card">
-        <img src="./pushup.jpg" alt="" />
-        <h3>Body weight training</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-          sed
-          nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-          finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-          sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-          pharetra
-          augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-        <a href="#">Read more</a>
-      </div>
+    <div class="news-card">
+      <img src="./skiing2.jpg" alt="" />
+      <h3>Outdoor activities</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
+        sed
+        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
+        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
+        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
+        pharetra
+        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
+      <a href="#">Read more</a>
+    </div>
 
-      <div class="news-card">
-        <img src="./skiing2.jpg" alt="" />
-        <h3>Outdoor activities</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-          sed
-          nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-          finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-          sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-          pharetra
-          augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-        <a href="#">Read more</a>
-      </div>
+    <div class="news-card">
+      <img src="./hiit.jpg" alt="" />
+      <h3>High intensity interval training</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
+        sed
+        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
+        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
+        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
+        pharetra
+        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
+      <a href="#">Read more</a>
+    </div>
 
-      <div class="news-card">
-        <img src="./hiit.jpg" alt="" />
-        <h3>High intensity interval training</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-          sed
-          nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-          finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-          sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-          pharetra
-          augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-        <a href="#">Read more</a>
-      </div>
+    <div class="news-card">
+      <img src="./virtual.jpg" alt="" />
+      <h3>Virtual training</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
+        sed
+        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
+        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
+        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
+        pharetra
+        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
+      <a href="#">Read more</a>
+    </div>
 
-      <div class="news-card">
-        <img src="./virtual.jpg" alt="" />
-        <h3>Virtual training</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-          sed
-          nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-          finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-          sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-          pharetra
-          augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-        <a href="#">Read more</a>
-      </div>
+    <div class="news-card">
+      <img src="./exercisemedicine.jpg" alt="" />
+      <h3>Exercise is medicine</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
+        sed
+        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
+        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
+        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
+        pharetra
+        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
+      <a href="#">Read more</a>
+    </div>
 
-      <div class="news-card">
-        <img src="./exercisemedicine.jpg" alt="" />
-        <h3>Exercise is medicine</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-          sed
-          nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-          finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-          sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-          pharetra
-          augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-        <a href="#">Read more</a>
-      </div>
+    <div class="news-card">
+      <img src="./freeweights.jpg" alt="" />
+      <h3>Training with free weights</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
+        sed
+        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
+        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
+        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
+        pharetra
+        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
+      <a href="#">Read more</a>
+    </div>
 
-      <div class="news-card">
-        <img src="./freeweights.jpg" alt="" />
-        <h3>Training with free weights</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-          sed
-          nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-          finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-          sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-          pharetra
-          augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-        <a href="#">Read more</a>
-      </div>
+    <div class="news-card">
+      <img src="./older.jpg" alt="" />
+      <h3>Fitness programs for older adults</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
+        sed
+        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
+        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
+        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
+        pharetra
+        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
+      <a href="#">Read more</a>
+    </div>
 
-      <div class="news-card">
-        <img src="./older.jpg" alt="" />
-        <h3>Fitness programs for older adults</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-          sed
-          nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-          finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-          sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-          pharetra
-          augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-        <a href="#">Read more</a>
-      </div>
+    <div class="news-card">
+      <img src="./personaltraining.jpg" alt="" />
+      <h3>Personal training</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
+        sed
+        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
+        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
+        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
+        pharetra
+        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
+      <a href="#">Read more</a>
+    </div>
 
-      <div class="news-card">
-        <img src="./personaltraining.jpg" alt="" />
-        <h3>Personal training</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-          sed
-          nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-          finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-          sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-          pharetra
-          augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-        <a href="#">Read more</a>
-      </div>
-
-    </section>
-  </div>
+  </section>
 
   <footer>
-    <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Here you can find more information</a>
+    <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Here you can find
+      more information</a>
   </footer>
 
 </body>
