I have made more changes than I can remember

--- a/code/index.html
+++ b/code/index.html
@@ -7,45 +7,97 @@
     <meta http-equiv="X-UA-Compaatible" content="i.e-edge">
     <title>I did it - The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
 </head>
 
-<body class=body>
-    <header class="header">
-        <img class="logo" src="logo.svg" alt="Tecnigo">
-        <h1>This went down</h1>
 
-        <nav class="nav-bar">
-            <a class="nav-item">Me</a>
-            <a class="nav-item">Myself</a>
-            <a class="nav-item">I</a>
-            <!--Om jag sätter #så blir de länkade-->
-        </nav>
+<header>
+    <div class="logo">
+        <img src="logo.svg" class="technico">
+    </div>
 
-        <!--div class="hamburger">
-            <div></div>
-            <div></div>
-            <div></div>-->
-        </div>
 
-    </header>
-    <section class="head-news">
-        <img src="https://images.unsplash.com/photo-1429962714451-bb934ecdc4ec?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="person hartshape hand">
+
+    <a class="nav item1" href="#">No turing back</a>
+    <a class="nav item1" href="#">I really give up</a>
+    <a class="nav item1" href="#">please help me good</a>
+    <a class="nav item1" href="#">Going nuts</a>
+
+    <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+
+</header>
+
+
+<main class="papercontainer">
+    <section class="anything">
+        <article class="card topstroy">
+            <img src="logo.svg" alt="technicooo">
+            <div class="topstory--rightcol">
+                <h1>Learn to code in 24 weeks</h1>
+                <p id="topstory">Enter a Bootcamp they said.<br>You don't have to have any pre-knowalge they said.<br><br>Well that is if you haven't tested to code online or maby worked as an google analytic or maby you just have a developer friend hanging around that
+                    can help you out. WoW, I heard talks about rollercoaster rides but I neer realized that you accually could get stuck in the loop and just hang there upside down, full of angziety and fear!<br> Well the week isn't over yet, I still
+                    have 8h and 53mint hand in this side. Cross your fingers!
+                </p>
+                <div class="topstory--linkbox">
+                    <a href="https://www.technigo.io/program" class="redlink" , target="_blank">Read more</a>
+                </div>
+            </div>
+        </article>
     </section>
 
-    <section class="big-news-container">
-        <div class="news-card">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit sit, ipsam saepe id modi blanditiis perspiciatis cumque corrupti quasi, enim harum sed libero laudantium, dolores beatae ut molestias optio voluptatibus.</div>
-        <div class="news-card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, sed aperiam pariatur esse officia qui ullam saepe consectetur magni autem possimus amet adipisci dicta soluta sequi, libero aliquid maxime! Enim!</div>
-        <div class="news-card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At ut non ratione earum illum, quibusdam voluptates ad quis magni iure enim, perspiciatis nulla itaque quod doloremque, nam dignissimos nobis possimus!</div>
-        <div class="news-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati mollitia, temporibus incidunt, vero tempora pariatur blanditiis, cupiditate fugiat nihil labore recusandae adipisci! Odio quae veritatis distinctio qui debitis et delectus.</div>
-        <!-- The big news content -->
+
+
+    <section class="grind-comntainer">
+
+        <a href="#">
+            <articel class="card small">
+                <img src="logo.svg">
+                <h2>I relly dont know what to do here!</h2>
+            </articel>
+        </a>
+
+
+        <a href="#">
+            <articel class="card small">
+                <img src="logo.svg">
+                <h2>Or here!</h2>
+            </articel>
+        </a>
+
+        <a href="#">
+            <articel class="card small">
+                <img src="logo.svg">
+                <h2>Shit, another card to fix</h2>
+            </articel>
+        </a>
+
+        <a href="#">
+            <articel class="card small">
+                <img src="logo.svg">
+                <h2>Really!!!!</h2>
+            </articel>
+        </a>
+
+        <a href="#">
+            <articel class="card small">
+                <img src="logo.svg">
+                <h2>OMG! I give Up!</h2>
+            </articel>
+        </a>
+
     </section>
 
-    <section class="">
+</main>
 
-        <!-- The other news  -->
-    </section>
 
-</body>
+
+
+<footer>
+    <p class="credits">A bit was written by myself, a bit copied - but all with a blow to my pride</p>
+</footer>
 
 </html>
