added some text and symboles

--- a/code/index.html
+++ b/code/index.html
@@ -38,9 +38,9 @@
             <img src="logo.svg" alt="technicooo">
             <div class="topstory--rightcol">
                 <h1>Learn to code in 24 weeks</h1>
-                <p id="topstory">Enter a Bootcamp they said.<br>You don't have to have any pre-knowalge they said.<br><br>Well that is if you haven't tested to code online or maby worked as an google analytic or maby you just have a developer friend hanging around that
-                    can help you out. WoW, I heard talks about rollercoaster rides but I neer realized that you accually could get stuck in the loop and just hang there upside down, full of angziety and fear!<br> Well the week isn't over yet, I still
-                    have 8h and 53mint hand in this side. Cross your fingers!
+                <p id="topstory">☝🏼 Enter a Bootcamp they said.<br>🤙🏼 You don't have to have any pre-knowledge they said.<br><br> Well that is if you haven't tested to code online or maybe worked as a google analytic or maybe you just have a developer friend hanging
+                    around that can help you out.<br> I heard this talk about rollercoaster rides 🎢 but I never realized that you actually could get stuck in the loop and just hang there upside down, full of anxiety and fear!<br> Sunday isn't over yet
+                    👊🏻. Cross your fingers🤞🏼!
                 </p>
                 <div class="topstory--linkbox">
                     <a href="https://www.technigo.io/program" class="redlink" , target="_blank">Read more</a>
@@ -97,7 +97,7 @@
 
 
 <footer>
-    <p class="credits">A bit was written by myself, a bit copied - but all with a blow to my pride</p>
+    <p class="credits">👉🏻A bit was written by myself, a bit copied - but all with a blow to my pride👈🏻</p>
 </footer>
 
 </html>
