--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
   <title>Fitness News</title>
-  <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
@@ -28,8 +27,8 @@
 
     <nav class="navigation-container">
       <div class="navigation-item"><a href="#">HOME</a></div>
-      <div class="navigation-item"><a href="#">BIG NEWS</a></div>
-      <div class="navigation-item"><a href="#">OTHER NEWS</a></div>
+      <div class="navigation-item"><a href="#">MAIN ARTICLE</a></div>
+      <div class="navigation-item"><a href="#">TOP 10 TRENDS</a></div>
       <div class="navigation-item"><a href="#">ABOUT</a></div>
     </nav>
 
@@ -41,7 +40,7 @@
       <h2>TOP 10 Fitness trends for 2021</h2>
       <p>American College of Sports Medicine has released <a
           href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">top 10 Fitness
-          Trends for 2021</a> which you can find on this site. </p>
+          Trends for 2021</a> which you can find on this site.</p>
     </article>
   </section>
 
@@ -49,138 +48,67 @@
     <div class="news-card">
       <img src="./homeworkout.jpg" alt="Home workout image" />
       <h3>Online training</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-        sed
-        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-        pharetra
-        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-      <a href="#">Read more</a>
+      <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Read more</a>
     </div>
 
     <div class="news-card">
-      <img src="./wearable.jpg" alt="" />
+      <img src="./wearable.jpg" alt="Sport watch image" />
       <h3>Wearable technology</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-        sed
-        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-        pharetra
-        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-      <a href="#">Read more</a>
+      <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Read more</a>
     </div>
 
     <div class="news-card">
-      <img src="./pushup.jpg" alt="" />
+      <img src="./pushup.jpg" alt="Push up image" />
       <h3>Body weight training</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-        sed
-        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-        pharetra
-        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-      <a href="#">Read more</a>
+      <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Read more</a>
     </div>
 
     <div class="news-card">
-      <img src="./skiing2.jpg" alt="" />
+      <img src="./skiing2.jpg" alt="Skiing image" />
       <h3>Outdoor activities</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-        sed
-        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-        pharetra
-        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-      <a href="#">Read more</a>
+      <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Read more</a>
     </div>
 
     <div class="news-card">
-      <img src="./hiit.jpg" alt="" />
+      <img src="./hiit.jpg" alt="HIIT image" />
       <h3>High intensity interval training</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-        sed
-        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-        pharetra
-        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-      <a href="#">Read more</a>
+      <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Read more</a>
     </div>
 
     <div class="news-card">
-      <img src="./virtual.jpg" alt="" />
+      <img src="./virtual.jpg" alt="Virtual workout image" />
       <h3>Virtual training</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-        sed
-        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-        pharetra
-        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-      <a href="#">Read more</a>
+      <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Read more</a>
     </div>
 
     <div class="news-card">
-      <img src="./exercisemedicine.jpg" alt="" />
+      <img src="./exercisemedicine.jpg" alt="walking image" />
       <h3>Exercise is medicine</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-        sed
-        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-        pharetra
-        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-      <a href="#">Read more</a>
+      <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Read more</a>
     </div>
 
     <div class="news-card">
-      <img src="./freeweights.jpg" alt="" />
+      <img src="./freeweights.jpg" alt="free weights image" />
       <h3>Training with free weights</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-        sed
-        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-        pharetra
-        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-      <a href="#">Read more</a>
+      <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Read more</a>
     </div>
 
     <div class="news-card">
-      <img src="./older.jpg" alt="" />
+      <img src="./older.jpg" alt="older adults training image" />
       <h3>Fitness programs for older adults</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-        sed
-        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-        pharetra
-        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-      <a href="#">Read more</a>
+      <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Read more</a>
     </div>
 
     <div class="news-card">
-      <img src="./personaltraining.jpg" alt="" />
+      <img src="./personaltraining.jpg" alt="personal training image" />
       <h3>Personal training</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
-        sed
-        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
-        pharetra
-        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi.</p>
-      <a href="#">Read more</a>
+      <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Read more</a>
     </div>
 
   </section>
 
   <footer>
-    <a href="https://www.acsm.org/read-research/trending-topics-resource-pages/acsm-fitness-trends">Here you can find
-      more information</a>
+    <p>Technigo bootcamp project 2.</p>
   </footer>
 
 </body>
