removed pics, added pics, added links

--- a/code/index.html
+++ b/code/index.html
@@ -67,7 +67,7 @@
 
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href=""><img src="\assets\Nike_Chinese_NY.jpg" alt="IMAGE"></a>
+          <a href=""><img src="\assets\008_native_1600.jpg" alt="IMAGE"></a>
         </div>
         <h3>Rip & Tear</h3>
         <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. </p>
