--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <img src="https://publicdomainvectors.org/photos/Teapot.png" alt="">
+    <img src="logo.png" alt="">
     <h1>The Leaflet</h1>
     <div class="hamburger">
       <div></div>
